--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reup-report/reup-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reup-report/reup-report.component.html
@@ -1,37 +1,99 @@
 <main>
-  <div class="row">
-    <div class="col-md-12 col-lg-4">
-      <h1 class="mb-4">Reup Report</h1>
+  <a [routerLink]="['/reports']" id="back-link"><i class="fa-solid fa-arrow-left-long me-2 mb-3"></i> Back </a>
+  <div class="h-100">
+    <div id="page-title" class="mb-3">
+      <h1><b> Reup Report</b></h1>
+    </div>
+    <div class="row border border-2 rounded-5 py-3 px-2 h-100" [ngStyle]="{'border': 'var(--white-smoke)'}">
+      <div class="row" [ngStyle]="{'height': '30%'}">
+
+        <div class="col-12">
+       <app-upload class="w-100" (fileSelected)="onFileSelected($event)" [validName]="validFileName"></app-upload>
+
+
+          <div id="template" class="row rounded-3 mx-1 my-2 px-2" [ngStyle]="{'height': '27%'}">
+            <div class="col-10 my-auto">
+              <a role="button" (click)="exportReportTemplate()"><b>File template</b></a>
+              <p class="mb-0">You can download the attached template and use it as a starting point for your own file.
+              </p>
+            </div>
+            <div class="col-2 my-auto text-center">
+              <button class="border-0 rounded-3" (click)="exportReportTemplate()"><b>Download</b></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row" [ngStyle]="{'height': '70%'}">
+        <div id="data" class="px-2 mt-4 h-100">
+          <div class="table mat-elevation-z8 rounded-top-4" [ngStyle]="dataSource.length<=pageSize ? {'border-radius': '20px'} : {}">
+            <table mat-table [dataSource]="dataSource" class="rounded-top-4">
+              <ng-container matColumnDef="expense">
+                <th mat-header-cell *matHeaderCellDef> Expense </th>
+                <td mat-cell *matCellDef="let element"> {{element.expenseName}} </td>
+              </ng-container>
+              <ng-container matColumnDef="costType">
+                <th mat-header-cell *matHeaderCellDef> Cost Type </th>
+                <td mat-cell *matCellDef="let element"> {{element.costType}} </td>
+              </ng-container>
+              <ng-container matColumnDef="unitPrice">
+                <th mat-header-cell *matHeaderCellDef> Unit Price(VND) </th>
+                <td mat-cell *matCellDef="let element"> {{element.unitPrice}} </td>
+              </ng-container>
+              <ng-container matColumnDef="amount">
+                <th mat-header-cell *matHeaderCellDef> Amount </th>
+                <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+              </ng-container>
+              <ng-container matColumnDef="total">
+                <th mat-header-cell *matHeaderCellDef> Total(VND) </th>
+                <td mat-cell *matCellDef="let element"> {{element.totalAmount}} </td>
+              </ng-container>
+              <ng-container matColumnDef="projectName">
+                <th mat-header-cell *matHeaderCellDef> Project Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
+              </ng-container>
+              <ng-container matColumnDef="supplierName">
+                <th mat-header-cell *matHeaderCellDef> Supplier Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.supplierName}} </td>
+              </ng-container>
+              <ng-container matColumnDef="pic">
+                <th mat-header-cell *matHeaderCellDef> PIC </th>
+                <td mat-cell *matCellDef="let element"> {{element.pic}} </td>
+              </ng-container>
+              <ng-container matColumnDef="notes">
+                <th mat-header-cell *matHeaderCellDef> Notes </th>
+                <td mat-cell *matCellDef="let element"> {{element.note == null ? 'N/A' : element.note}} </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
+              <tr mat-row *matRowDef="let row; columns: columnHeaders;"></tr>
+            </table>
+
+            <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex"
+              (page)="onPageChange($event)" [hidden]="dataSource.length==0 || (dataSource.length<pageSize && pageIndex==0)">
+            </mat-paginator>
+          </div>
+          <button id="submit-button" [ngStyle]="{'height': '9%'}"
+            class="border-0 rounded-3 float-end" [disabled]="filedata === undefined || filedata.length == 0" (click)="onSubmit()"><b>Submit</b></button>
+        </div>
+      </div>
+       
+    </div>
+    </div>
+
+
+
       <!-- <h5>Step 1/2: Please select a file to import</h5> -->
-      <mat-card class="import-card">
-        <!-- <form [formGroup]="reportForm">
-          <mat-form-field>
-            <mat-label>Term</mat-label>
-            <mat-select disableOptionCentering panelClass="dropDown-seasons-panel" id="term" formControlName="term" (selectionChange)="changeTerm()">
-              <mat-option *ngFor="let option of termOptions" [value]="option">
-                {{option.termName}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field>
-            <mat-label>Month</mat-label>
-            <mat-select disableOptionCentering panelClass="dropDown-seasons-panel" id="month" formControlName="month">
-              <mat-option *ngFor="let option of monthOptions" [value]="option">
-                {{option}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </form> -->
+      <!-- <mat-card class="import-card">
+    
         <app-upload class="w-100" (fileSelected)="onFileSelected($event)" [validName]="validFileName"></app-upload>
         <div class="buttons">
           <button class="preview-button" (click)="onImport()">
             <span>Preview</span>
           </button>
         </div>
-      </mat-card>
-    </div>
-    <div class="col-md-12 col-lg-8">
-      <mat-card class="preview-card">
+      </mat-card> -->
+
+      <!-- <mat-card class="preview-card">
         <h3 class="mb-3">Preview</h3>
         <div class="table">
           <table mat-table [dataSource]="dataSource" class="">
@@ -92,9 +154,8 @@
             </button>
           </div>
         </div>
-      </mat-card>
-    </div>
-  </div>
+      </mat-card> -->
+  
 
 
 </main>
