restyle forgot password UI

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -3,7 +3,7 @@
     <mat-card class="row">
         <div class="col-6">
             <h6 id="company-name">FinancialPlanning</h6>
-            <div class="content">
+            <div class="d-flex flex-column justify-content-center "[ngStyle]="{'height': '90%','margin-top': '10%'}">
                 <mat-card-header class="mb-4">
                     <mat-card-title>Forgot password?</mat-card-title>
                     <mat-card-subtitle>No worries, we'll send you reset instructions.</mat-card-subtitle>
