--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/auth/forgot-password/forgot-password.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/auth/forgot-password/forgot-password.component.css
@@ -4,6 +4,7 @@ main {
   background-color: white;
   color: #070f2b;
   position: relative;
+  overflow: hidden;
 }
 
 .bg-image {
@@ -15,8 +16,10 @@ main {
 }
 
 mat-card {
-  height: 600px;
-  width: 1200px;
+  /* height: 600px;
+  width: 1200px; */
+  height: 62%;
+  width: 63%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -30,7 +33,6 @@ mat-card {
   top: 50%;
   left: 25%;
   transform: translate(-50%, -50%);
-  width: 400px;
 }
 
 #company-name {
@@ -63,7 +65,7 @@ a {
   text-decoration: none;
   color: #070f2b;
   position: absolute;
-  left: 50%;
+  left: 42%;
   transform: translateX(-50%);
 }
 
