--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
@@ -1,5 +1,5 @@
 <main>
-  <div class="container mb-4 pb-3 mx-0">
+  <div class="containerr mb-4 pb-3 mx-0">
     <div id="page-title">
       <h3><b> Financial Plans</b></h3>
       <h6>Plan List</h6>
