--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.html
@@ -1,13 +1,11 @@
 <main>
   <a [routerLink]="['/reports']" id="back-link"><i class="fa-solid fa-arrow-left-long me-2 mb-3"></i> Back </a>
   <div class="h-100">
-  
+
     <div id="page-title" class="mb-3">
       <h1><b> Import Report</b></h1>
     </div>
     <div class="row border border-2 rounded-5 py-3 px-2 h-100" [ngStyle]="{'border': 'var(--white-smoke)'}">
-   
-
       <div class="row" [ngStyle]="{'height': '30%'}">
         <div class="col-2 border-end border-2" [ngStyle]="{'border': 'var(--white-smoke)'}">
           <h4><b>Step 1</b></h4>
@@ -20,26 +18,22 @@
                 </mat-option>
               </mat-select>
             </mat-form-field>
-            <mat-form-field>
+            <mat-form-field hideRequiredMarker class="w-100">
               <mat-label>Month</mat-label>
-              <mat-select disableOptionCentering id="month" formControlName="month" (selectionChange)="onMonthSelected()">
+              <mat-select disableOptionCentering id="month" formControlName="month"
+                (selectionChange)="onMonthSelected()">
                 <mat-option *ngFor="let option of monthOptions" [value]="option">
                   {{option}}
                 </mat-option>
-              </mat-select> 
+              </mat-select>
             </mat-form-field>
           </form>
         </div>
         <div class="col-10">
           <h4><b>Step 2</b></h4>
-          <app-upload class="w-100" 
-          (fileSelected)="onFileSelected($event)" 
-          [isMonthSelected]="isMonthSelected" 
-          [isTermSelected]="isTermSelected" 
-          [validName]="validFileName" 
-          [dueDate]="dueDate"
-          (change)="onImport()" 
-          [ngStyle]="{'height': '54%'}"></app-upload>
+          <app-upload class="w-100" (fileSelected)="onFileSelected($event)" [isMonthSelected]="isMonthSelected"
+            [isTermSelected]="isTermSelected" [validName]="validFileName" [dueDate]="dueDate" (change)="onImport()"
+            [loading]="loading" [ngStyle]="{'height': '54%'}"></app-upload>
           <div id="template" class="row rounded-3 mx-1 my-2 px-2" [ngStyle]="{'height': '27%'}">
             <div class="col-10 my-auto">
               <a role="button" (click)="exportReportTemplate()"><b>File template</b></a>
@@ -54,8 +48,10 @@
       </div>
       <div class="row" [ngStyle]="{'height': '70%'}">
         <div id="data" class="px-2 mt-4 h-100">
-          <div class="table mat-elevation-z8 rounded-top-4" [ngStyle]="dataSource.length<=pageSize ? {'border-radius': '20px'} : {}">
-            <table mat-table [dataSource]="dataSource" class="rounded-top-4">
+          <div class="table mat-elevation-z8 rounded-top-4"
+            [ngStyle]="dataSource.length<=pageSize ? {'border-radius': '20px'} : {}">
+            <table mat-table [dataSource]="dataSource" class="rounded-top-4"
+              [ngStyle]="dataSource.length == 0 ? {'height': '500px'} : {}">
               <ng-container matColumnDef="expense">
                 <th mat-header-cell *matHeaderCellDef> Expense </th>
                 <td mat-cell *matCellDef="let element"> {{element.expenseName}} </td>
@@ -98,15 +94,16 @@
             </table>
 
             <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex"
-              (page)="onPageChange($event)" [hidden]="dataSource.length==0 || (dataSource.length<pageSize && pageIndex==0)">
+              (page)="onPageChange($event)"
+              [hidden]="dataSource.length==0 || (dataSource.length<pageSize && pageIndex==0)">
             </mat-paginator>
           </div>
-          <button id="submit-button" [ngStyle]="{'height': '9%'}"
-            class="border-0 rounded-3 float-end" [disabled]="filedata === undefined || filedata.length == 0" (click)="onSubmit()"><b>Submit</b></button>
+          <button id="submit-button" [ngStyle]="{'height': '9%'}" class="border-0 rounded-3 float-end"
+            [disabled]="filedata === undefined || filedata.length == 0" (click)="onSubmit()"><b>Submit</b></button>
         </div>
       </div>
 
-    <!-- <div class="col-md-12 col-lg-8">
+      <!-- <div class="col-md-12 col-lg-8">
       <mat-card class="preview-card">
         <h3 class="mb-3">Preview</h3>
         <div class="table">
@@ -170,6 +167,6 @@
         </div>
       </mat-card>
     </div> -->
+    </div>
   </div>
-</div>
 </main>
