--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
@@ -20,7 +20,7 @@
           class="align-middle">filter_list</mat-icon> More </button>
     </div>
   <div *ngIf="filterStatusEnable">
-      <mat-form-field  >
+      <mat-form-field [hidden]="role !== 'FinancialStaff'" >
         <mat-label  >Department</mat-label>
         <mat-select [(value)]="selectedDepartment" (selectionChange)="onDepartmentSelected($event)">
           <mat-option value="All">All</mat-option>
@@ -29,7 +29,7 @@
           }
         </mat-select>
       </mat-form-field>
-      <mat-form-field [hidden]="role !== 'FinancialStaff'">
+      <mat-form-field >
         <mat-label >Term</mat-label>
         <mat-select [(value)]="selectedTerm" (selectionChange)="onTermSelected($event)">
           <mat-option value="All">All</mat-option>
@@ -97,7 +97,7 @@
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let plan">
         <a [routerLink]="[ '/plan-details/', plan.id ]"><mat-icon>visibility</mat-icon></a>
-        <a *ngIf="showEditDeleteButton(plan)" (click)="openDeleteDialog(plan.id)"><mat-icon>delete</mat-icon></a>
+        <a [hidden]="(plan.status != 'New')" *ngIf="showEditDeleteButton(plan)" (click)="openDeleteDialog(plan.id)"><mat-icon>delete</mat-icon></a>
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
