--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.html
@@ -32,7 +32,7 @@
   
   <div class="abc">
     <a *ngIf="plan" [routerLink]="['/reup-plan/', plan.id ]" class="create-button" >
-      <button *ngIf="!isPlanApproved"> Reup</button>
+      <button *ngIf="isReup"> Reup</button>
     </a>
     
     <a   class="create-button" >
