--- a/FinancialPlaningUI/FinancialPlaning/src/styles.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/styles.css
@@ -6,8 +6,8 @@
   --sidenav-secondary-background: #6744ff;
   --sidenav-primary-background: #152630;
   --icon-background: #28485a;
-  --new-status-background: #e7f9e7;
-  --new-status-color: #7af787;
+  --new-status-background: #e7e7f9;
+  --new-status-color: #7a97f7;
   --inprogress-status-background: #fff2df;
   --inprogress-status-color: #ffa500;
   --closed-status-background: #ececec;
@@ -16,6 +16,8 @@
   --button-hover: #553cb9;
   --version-background: #fff5cc;
   --close-button-background: #f88477;
+  --approved-status-background: #e7f9e7;
+  --approved-status-color: #7af787;
 }
 
 body {
