--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
@@ -97,7 +97,7 @@
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let plan">
         <a [routerLink]="[ '/plan-details/', plan.id ]"><mat-icon>visibility</mat-icon></a>
-        <a *ngIf="showEditDeleteButton(plan)" (click)="openDeleteDialog(plan.id)"><mat-icon>delete</mat-icon></a>
+        <a [hidden]="plan.status != 'New'" *ngIf="showEditDeleteButton(plan)" (click)="openDeleteDialog(plan.id)"><mat-icon>delete</mat-icon></a>
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
