--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
@@ -6,7 +6,7 @@
     </div>
     
     <div class="top-button">
-      <a class="create-button" routerLink="/import-report">
+      <a class="create-button" routerLink="/import-plan">
         <button><i class="fa-solid fa-upload me-1"></i> Import</button>
       </a> 
     </div>
