fix report names

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/reup-plan/reup-plan.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/reup-plan/reup-plan.component.html
@@ -107,7 +107,7 @@
         <div class="col-10">
           <h4><b>Import file</b></h4>
           <app-upload 
-          (fileSelected)="onFileSelected($event)" 
+          (fileSelected)="onImport($event)" 
           [validName]="validFileName"
           [loading]="loading"
           [dueDate]="dueDate"
