--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.html
@@ -31,8 +31,8 @@
         </div>
         <div class="col-10">
           <h4><b>Step 2</b></h4>
-          <app-upload class="w-100" (fileSelected)="onFileSelected($event)" [isMonthSelected]="isMonthSelected"
-            [isTermSelected]="isTermSelected" [validName]="validFileName" [dueDate]="dueDate" (change)="onImport()"
+          <app-upload class="w-100" (fileSelected)="onImport($event)" [isMonthSelected]="isMonthSelected"
+            [isTermSelected]="isTermSelected" [validName]="validFileName" [dueDate]="dueDate"
             [loading]="loading" [ngStyle]="{'height': '54%'}"></app-upload>
           <div id="template" class="row rounded-3 mx-1 my-2 px-2" [ngStyle]="{'height': '27%'}">
             <div class="col-10 my-auto">
