--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reup-report/reup-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reup-report/reup-report.component.html
@@ -8,7 +8,12 @@
       <div class="row" [ngStyle]="{'height': '30%'}">
 
         <div class="col-12">
-       <app-upload class="w-100" (fileSelected)="onFileSelected($event)" [validName]="validFileName"></app-upload>
+          <app-upload 
+          (fileSelected)="onImport($event)" 
+          [validName]="validFileName"
+          [loading]="loading"
+          [dueDate]="dueDate"
+          ></app-upload>
 
 
           <div id="template" class="row rounded-3 mx-1 my-2 px-2" [ngStyle]="{'height': '27%'}">
