--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.html
@@ -62,7 +62,7 @@
               </ng-container>
               <ng-container matColumnDef="unitPrice">
                 <th mat-header-cell *matHeaderCellDef> Unit Price(VND) </th>
-                <td mat-cell *matCellDef="let element"> {{element.unitPrice}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.unitPrice | number:'1.0-0'}} </td>
               </ng-container>
               <ng-container matColumnDef="amount">
                 <th mat-header-cell *matHeaderCellDef> Amount </th>
@@ -70,7 +70,7 @@
               </ng-container>
               <ng-container matColumnDef="total">
                 <th mat-header-cell *matHeaderCellDef> Total(VND) </th>
-                <td mat-cell *matCellDef="let element"> {{element.totalAmount}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.totalAmount | number:'1.0-0'}} </td>
               </ng-container>
               <ng-container matColumnDef="projectName">
                 <th mat-header-cell *matHeaderCellDef> Project Name </th>
