--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reup-report/reup-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reup-report/reup-report.component.html
@@ -6,8 +6,17 @@
     </div>
     <div class="row border border-2 rounded-5 py-3 px-2 h-100" [ngStyle]="{'border': 'var(--white-smoke)'}">
       <div class="row" [ngStyle]="{'height': '30%'}">
+        <div class="col-2 border-end border-2" [ngStyle]="{'border': 'var(--white-smoke)'}">
+          <h4><b>Report detail</b></h4>
+          <div class="container">
+            <h5><b>Term:</b></h5>
+            <p>{{term}}</p>
+            <h5><b>Department:</b></h5>
+            <p>{{month}}</p>
+          </div>
+        </div>
 
-        <div class="col-12">
+        <div class="col-10">
           <app-upload 
           (fileSelected)="onImport($event)" 
           [validName]="validFileName"
@@ -42,7 +51,7 @@
               </ng-container>
               <ng-container matColumnDef="unitPrice">
                 <th mat-header-cell *matHeaderCellDef> Unit Price(VND) </th>
-                <td mat-cell *matCellDef="let element"> {{element.unitPrice}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.unitPrice| number:'1.0-0'}} </td>
               </ng-container>
               <ng-container matColumnDef="amount">
                 <th mat-header-cell *matHeaderCellDef> Amount </th>
@@ -50,7 +59,7 @@
               </ng-container>
               <ng-container matColumnDef="total">
                 <th mat-header-cell *matHeaderCellDef> Total(VND) </th>
-                <td mat-cell *matCellDef="let element"> {{element.totalAmount}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.totalAmount| number:'1.0-0'}} </td>
               </ng-container>
               <ng-container matColumnDef="projectName">
                 <th mat-header-cell *matHeaderCellDef> Project Name </th>
