--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reup-report/reup-report.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reup-report/reup-report.component.css
@@ -1,7 +1,5 @@
 main {
     position: absolute;
-    height: 100vh;
-    width: calc(100vw - 80px);
     max-width: calc(100vw - 80px);
     left: 60px;
     padding: 30px;
@@ -42,7 +40,7 @@ main {
     width: 105px;
     height: 40px;
     background-color: white;
-    padding: .5rem 1rem;
+    padding: 0.5rem 1rem;
   }
   
   button:hover:not(:disabled) {
@@ -60,10 +58,6 @@ main {
     border-radius: 10px;
   }
   
-  .table {
-    height: 81%;
-  }
-  
   table {
     width: 100%;
     border: 2px solid var(--white-smoke);
@@ -71,7 +65,7 @@ main {
     border-top-right-radius: 20px;
     overflow: hidden !important;
     box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
-    flex-shrink: 0;
+    flex-shrink: 1;
   }
   
   th {
