--- a/FinancialPlaningUI/FinancialPlaning/src/app/share/dialog/dialog.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/share/dialog/dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title [style.color]="data.action === 'delete' ? 'ff204e' : '#3b99e7'">{{ data.title }}</h1>
+<h1 mat-dialog-title [style.color]="data.action === 'delete' ? 'ff204e' : '#0079f1'">{{ data.title }}</h1>
 <mat-dialog-content>
     <p><b>{{ data.content }}</b><p>
     <p class="note">{{ data.note }}</p>
