fix: forgot password, reset password page

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -1,15 +1,15 @@
 <main>
     <div class="bg-image"></div>
     <mat-card class="row">
-        <div class="col-6">
+        <div class="col-6 h-100">
             <h6 id="company-name">FinancialPlanning</h6>
-            <div class="d-flex flex-column justify-content-center "[ngStyle]="{'height': '90%','margin-top': '10%'}">
+            <div class="d-flex flex-column justify-content-center "[ngStyle]="{'height': '90%'}">
                 <mat-card-header class="mb-4">
                     <mat-card-title>Forgot password?</mat-card-title>
                     <mat-card-subtitle>No worries, we'll send you reset instructions.</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
-                    <form class="w-100 mb-3" (ngSubmit)="onSubmit()">
+                    <form class="w-100" (ngSubmit)="onSubmit()">
                         <mat-form-field class="w-100 mb-2" hideRequiredMarker="true">
                             <mat-label>Email</mat-label>
                             <input matInput type="email" placeholder="Ex. user@mail.com"
@@ -24,7 +24,7 @@
                             <span *ngIf="!isLoading">Reset password</span>
                         </button>
                     </form>
-                    <a routerLink="/login"><i class="fa-solid fa-arrow-left"></i>Back to log in</a>
+                    <a routerLink="/login" class="d-table mx-auto mt-2"><i class="fa-solid fa-arrow-left"></i>Back to log in</a>
                 </mat-card-content>
             </div>
         </div>
