--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/auth/reset-password/reset-password.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/auth/reset-password/reset-password.component.css
@@ -4,6 +4,7 @@ main {
   background-color: white;
   color: #070f2b;
   position: relative;
+  overflow: hidden;
 }
 
 .bg-image {
@@ -15,8 +16,8 @@ main {
 }
 
 mat-card {
-  height: 600px;
-  width: 1200px;
+  height: 75%;
+  width: 75%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -28,14 +29,12 @@ mat-card {
 .content {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 25%;
   transform: translate(-50%, -50%);
-  width: 400px;
 }
 
 #company-name {
   font-weight: bold;
-  margin-bottom: 6rem !important;
 }
 
 mat-card-header {
