--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.html
@@ -76,10 +76,10 @@
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <ng-container matColumnDef="Checkbox">
         <th mat-header-cell *matHeaderCellDef>
-          <mat-checkbox *ngIf="plan.status === 'WaitingForApproval'" (change)="toggleAllCheckboxes($event)"></mat-checkbox>
+          <mat-checkbox color="primary" *ngIf="plan.status === 'WaitingForApproval'" (change)="toggleAllCheckboxes($event)"></mat-checkbox>
         </th>
         <td mat-cell *matCellDef="let element">
-          <mat-checkbox *ngIf="plan.status === 'WaitingForApproval'" [checked]="isExpenseApproved(element.no)"
+          <mat-checkbox color="primary" *ngIf="plan.status === 'WaitingForApproval'" [checked]="isExpenseApproved(element.no)"
             (change)="toggleCheckbox(element.no)">
           </mat-checkbox>
         </td>
